# ms-roj

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
bundle/: com.github.ankjevel.ms-roj.desktop
bundle/app/: Info.plist  main.swift
bundle/app/Minesweeper.xcodeproj/: project.pbxproj
resources/: com.github.Iteam13337.ms-roj.desktop  com.github.Iteam1337.ms-roj.desktop  game.glade  resources.gresource  resources.xml  style.css
src/: main.rs
src/lib/: application.rs  block.rs  game.rs  gen_mine_grid.rs  icons.rs  message.rs  mod.rs  position.rs  tile.rs  ui.rs  widget.rs
