[package]
name = "ms-röj"
version = "1.0.0"
authors = ["Dennis Pettersson"]
edition = "2018"

[dependencies]
rand = "0.7.3"
termion = "1.5.5"
lazy_static = "1.4.0"
glib = "0.9.3"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = "0.8.1"
features = ["v2_44"]

[profile.release]
lto = true
panic = "abort"
opt-level = 3
