[package]
name = "ms-roj"
version = "1.0.0"
authors = ["Dennis Pettersson"]
edition = "2018"

[dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"
glib = "0.10.3"
gdk = "0.13.2"
gdk-pixbuf = "0.9.0"
lazy-static-include = "3.0.5"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_24_9"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]

[profile.release]
lto = true
panic = "abort"
opt-level = 3
